# McDobal

./: Cargo.toml  README.md
country/: README.md  mcdsdk.md
src/: checkinternet.rs  connect.rs  main.rs
