[package]
name = "McDobal"
version = "0.0.1"
edition = "2021"
authors = ["Martin Eesmaa <martin.eesmaa@protonmail.com>"]
description = """
McDobal is a frontend CLI-tool can order globally McDonald's
"""
readme = "README.md"
repository = "https://github.com/MartinEesmaa/McDobal"
license = "AGPL-3.0"

[dependencies]
base64 = "0.22.1"
reqwest = {version = "0.12.8", features = ["blocking", "json"] }
json = "0.12.4"
text2art = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4"] }
regex = "*"